--- a/Dice-Game/index.html
+++ b/Dice-Game/index.html
@@ -9,9 +9,7 @@
   <body>
     
     <div class="container">
-      <h1>Welcome to Online DICE GAME</h1>
-      <br><br>
-      <br><br>
+      <h1 id="Heading">WELCOME TO ONLINE DICE GAME</h1>
       <br><br>
       <br><br>
       <br><br>
@@ -31,15 +29,13 @@
       </div>
     
       <br><br>
-      <!-- <input class="nameInput" style="margin:40px;" type="text" placeholder="Name of Player 1">    
-      <input class="nameInput" style="margin:40px;" type="text" placeholder="Name of Player 2">  -->
       <br><br>
       <br><br>
-      <button id="btn" class="refresh" onclick="mouseClick();" >ROLL THE DICE</button>
+      <button id="btn" class="refresh" >ROLL THE DICE</button>
       <br><br>     
       <br><br>   
-      <button type="button" id="clickButton">SCORES</button>
-      <p>Clicks: <a id="clicks">0</a></p>
+      <!-- <button type="button" id="clickButton">SCORES</button> -->
+      <p>#Clicks: <a id="clicks">0</a></p>
       <br><br>  
       <button type="button" id="resetButton" onclick="resetButton();">RESET</button>
       <!-- <a href="#" onclick="resetCounter(); return false">Reset counter</a> -->
